--- a/style.css
+++ b/style.css
@@ -6,7 +6,50 @@
 .header {
     display: flex;
     justify-content: center;
+    padding-bottom: 50px
 }
-.game-field {
+
+.game-score{
+    display: flex;
+    justify-content: center;
+}
+
+.canvas-wrapper {
+    display: flex;
+    justify-content: center;
+    border-radius: 5px;
     background-color: rgb(36, 55, 44);
+}
+
+.game {
+    display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.game-field {
+    width: 400px;
+    height: 400px;
+    display: block;
+    border-radius: 5px;
+    /* background-color: rgb(36, 55, 44); */
+}
+
+.game-score {
+    padding: 10px 15px;
+	min-width: 160px;
+	height: 50px;
+	background: #121214;
+	border-radius: 5px;
+    margin-bottom: 20px;
+
+    display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.score-text {
+    font-weight: bold;
+    color: white;
 }
