--- a/style.css
+++ b/style.css
@@ -1,55 +1,54 @@
-.container {
-    height: 1080px;
-    background-color: coral;
+body {
+	margin: 0px;
+	font-family: sans-serif;
 }
 
-.header {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 50px
-}
 
-.game-score{
-    display: flex;
-    justify-content: center;
-}
+#game {
+	background: #353336;
+	width: 100vw;
+	height: 100vh;
 
-.canvas-wrapper {
-    display: flex;
-    justify-content: center;
-    border-radius: 5px;
-    background-color: rgb(36, 55, 44);
-}
-
-.game {
-    display: flex;
+	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 }
 
-.game-field {
-    width: 400px;
-    height: 400px;
-    display: block;
-    border-radius: 5px;
-    /* background-color: rgb(36, 55, 44); */
+#game-canvas {
+	display: block;
+	border-radius: 5px;	
 }
 
+.game-header {
+	padding-top: 1vmin;
+	padding-bottom: 1vmin;
+
+	display: flex;
+	justify-content: space-between;
+}
 .game-score {
-    padding: 10px 15px;
+	padding: 10px 15px;
 	min-width: 160px;
 	height: 50px;
 	background: #121214;
 	border-radius: 5px;
-    margin-bottom: 20px;
 
-    display: flex;
+	display: flex;
 	justify-content: center;
 	align-items: center;
 }
+.score-count{
+	font-size: 3vmin;
+	color: #D21855;
+	font-weight: bold;
+}
 
-.score-text {
-    font-weight: bold;
-    color: white;
+.canvas-wrapper {
+	background-color: #161618;
+	border-radius: 5px;
+	border: 10px solid #161618;
+	box-shadow: 0px 0px 40px 10px #181616;
+
+	background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 16 16' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg opacity='0.2'%3E%3Ccircle cx='8' cy='8' r='4' fill='%23525053'/%3E%3C/g%3E%3C/svg%3E%0A");
 }
